2014-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_search_in_node): Merged into callers in
	info_target_search_node and make_footnotes_node.

	* info/search.c (regexp_search): Store previous start and end of
	search.  Recalculate matches if new search range is outside these.
	When looking for matches, check that they are within the search range.
	* info/t/search-skip-screen.sh: New test.
	* info/t/infodir/search.info: New file.

	* info/info-utils.c (copy_input_to_output): Use < instead of <= to
	avoid adjusting anchor just outside of range.  Check if a count of
	bytes went negative by mistake.
	* info/t/anchor-positions.sh: New test.
	* info/t/infodir/anchor-positions.info: New file.

	* info/session.c (key_time): New variable.
	(get_input_key_internal): Use it instead of hardcoded value.
	(info_variables): Add 'key-time' user variable.

2014-07-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_search_1): Unused 'key' argument removed.
	Rely on info_search_internal to print an error message.
	(info_search_internal): Print an error message if search failed if not
	in interactive search.
	* info/window.c (set_window_pagetop): Comment changed.
	* info/info.c (info_error_was_printed): Variable removed.  All
	accesses removed.

	* info/t/file.sh: Check subnode dumping is on when not outputting to
	a terminal.

2014-07-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.c (compile): Keep going for unrecognized or invalid
	actions.
	* info/t/Infokey-config: Add lines with invalid actions.

	* info/signals.c (old_TERM): New variable.
	(mask_termsig, initialize_info_signal_handler, info_signal_proc): Trap
	SIGTERM as was done for SIGINT to allow cleanup of terminal state.

2014-07-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.c (compile): Don't allow binding to menu-digit.
	* info/session.c (info_next_line, info_prev_line): Don't actually
	move cursor until we have set the right column.